Added Frontend and some extreme feature edited